# How-sYourDay

./: .env.example  .gitignore  README.md  RULES.md  package-lock.json  package.json
apps/web/: package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts
docs/: agent-harness.md  emotion-waypoint-routing.md  landmark-emotion-priors.md  tool-contracts.md
server/: pyproject.toml
server/agent/: daily_planning_agent.py
server/api/: main.py  schemas.py
server/auth/: database.py  router.py  security.py
server/memory/: preferences.py
server/planner/: compose_plan.py  evaluate_tradeoffs.py
server/tests/: test_agent.py
server/tools/: emotion_score.py  emotion_waypoints.py  extract_intent.py  extract_route_locations.py  geocode.py  kakao_local.py  landmark_emotion_prior.py  llm_intent.py  llm_waypoint_policy.py  preference_points.py  preview_insights.py  route_path.py  search_poi.py  tmap_route.py
